--- a/main.html
+++ b/main.html
@@ -8,6 +8,35 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>
+		<h1>Harry Potter and the Sorcerer's Stone</h1>
+		<nav>
+			<a id="nav-actor" href="#actor">Actors</a>
+			<a id="nav-quotes" hred="#quote">Quotes</a>
+		</nav>
+	</header>
+	<summary>
+		An orphaned boy enrolls in a school of wizardry, where he learns the truth about himself, his family and the terrible evil that haunts the magical world.
+	</summary>
+
+	<section id="actor">
+		Stars: Daniel RadcliffeRupert GrintRichard Harris
+	</section>
+	<section id="#quote">
+		"Books! And cleverness!"
+		"There is no good and evil, there is only power, and those too weak to seek it…" ( p. ...
+		"After all, to the well-organized mind, death is but the next great adventure." ( p. ...
+		"The truth.” Dumbledore sighed. “ ...
+		“There are all kinds of courage,” said Dumbledore, smiling. “
+	</section>
+	<aside>
+		<h3>Rating: 7.6/10</h3>
+		<h3>Release: 2 April 2002</h3>
+	</aside>
+	<footer>
+		Produced by: &lt name &gt
+	</footer>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
