--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 		<h1>Harry Potter and the Sorcerer's Stone</h1>
 		<nav>
 			<a id="nav-actor" href="#actor">Actors</a>
-			<a id="nav-quotes" hred="#quote">Quotes</a>
+			<a id="nav-quote" hred="#quote">Quotes</a>
 		</nav>
 	</header>
 	<summary>
@@ -22,7 +22,7 @@
 	<section id="actor">
 		Stars: Daniel RadcliffeRupert GrintRichard Harris
 	</section>
-	<section id="#quote">
+	<section id="quote">
 		"Books! And cleverness!"
 		"There is no good and evil, there is only power, and those too weak to seek it…" ( p. ...
 		"After all, to the well-organized mind, death is but the next great adventure." ( p. ...
