--- a/main.html
+++ b/main.html
@@ -20,14 +20,14 @@
 	</summary>
 
 	<section id="actor">
-		Stars: Daniel RadcliffeRupert GrintRichard Harris
+		Stars: 
+		Daniel Radcliffe
+		Rupert Grint
+		Richard Harris
 	</section>
 	<section id="quote">
 		"Books! And cleverness!"
-		"There is no good and evil, there is only power, and those too weak to seek it…" ( p. ...
-		"After all, to the well-organized mind, death is but the next great adventure." ( p. ...
-		"The truth.” Dumbledore sighed. “ ...
-		“There are all kinds of courage,” said Dumbledore, smiling. “
+		"There is no good and evil, there is only power, and those too weak to seek it…"
 	</section>
 	<aside>
 		<h3>Rating: 7.6/10</h3>
