--- a/main.html
+++ b/main.html
@@ -20,14 +20,18 @@
 	</summary>
 
 	<section id="actor">
-		Stars: 
+		<p>
+			Stars: 
 		Daniel Radcliffe
 		Rupert Grint
 		Richard Harris
+		</p>
 	</section>
 	<section id="quote">
-		"Books! And cleverness!"
+		<blockquote>
+			"Books! And cleverness!"
 		"There is no good and evil, there is only power, and those too weak to seek it…"
+		</blockquote>
 	</section>
 	<aside>
 		<h3>Rating: 7.6/10</h3>
