--- a/main.html
+++ b/main.html
@@ -28,10 +28,10 @@
 		</p>
 	</section>
 	<section id="quote">
-		<blockquote>
+		<span>
 			"Books! And cleverness!"
 		"There is no good and evil, there is only power, and those too weak to seek it…"
-		</blockquote>
+		</span>
 	</section>
 	<aside>
 		<h3>Rating: 7.6/10</h3>
