--- a/main.html
+++ b/main.html
@@ -27,8 +27,8 @@
 		Richard Harris
 		</p>
 	</section>
-	<section id="quote">
-		<span>
+	<section >
+		<span id="quote">
 			"Books! And cleverness!"
 		"There is no good and evil, there is only power, and those too weak to seek it…"
 		</span>
