--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 		<h1>Harry Potter and the Sorcerer's Stone</h1>
 		<nav>
 			<a id="nav-actor" href="#actor">Actors</a>
-			<a id="nav-quote" hred="#quote">Quotes</a>
+			<a id="nav-quote" href="#quote">Quotes</a>
 		</nav>
 	</header>
 	<summary>
@@ -27,8 +27,8 @@
 		Richard Harris
 		</p>
 	</section>
-	<section >
-		<span id="quote">
+	<section id="quote">
+		<span>
 			"Books! And cleverness!"
 		"There is no good and evil, there is only power, and those too weak to seek it…"
 		</span>
